<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Login Activity -->
    <string name="logo">"Logo"</string>
    <string name="loginName">"Geben Sie Ihren Benutzernamen ein:"</string>
    <string name="loginPIN">"Geben Sie Ihren PIN ein:"</string>
    <string name="loginButton">"Anmelden"</string>
    <string name="registerNewButton">"Neu hier? Jetzt registrieren!"</string>
    <string name="loginError" tools:ignore="MissingTranslation">"Username oder PIN sind falsch/nicht registriert!"</string>

    <!-- Register Activity -->
    <string name="registerName">"Erstellen Sie einen Benutzernamen:"</string>
    <string name="registerPIN">"Geben Sie einen PIN-Code ein: (4-stellig)"</string>
    <string name="registerValidatePin">"Wiederholen Sie den Pin:"</string>
    <string name="registerButton">"Registrieren"</string>
    <string name="ok">"OK"</string>
    <string name="createUsernameError">"Der Benutzername darf nur aus Buchstaben und Zahlen bestehen!\nBitte keine Leerzeichen verwenden."</string>
    <string name="createPinError">"Der PIN muss aus vier Zahlen bestehen."</string>
    <string name="createPinMatchingError">"Die beiden PINs müssen übereinstimmen."</string>

    <!-- Fingerprint Activity -->
    <string name="fingerprintImage">"FingerprintImage"</string>
    <string name="fingerprintQuestion1">"Möchten Sie Ihren Fingerabdruck \nzum Einloggen verwenden?"</string>
    <string name="fingerprintButtonYes">"Ja"</string>
    <string name="fingerprintButtonSkip">"Überspringen"</string>

    <!--Strings fuer Userprofil-->
    <string name="app_name">HealthyReminder</string>
    <string name="createProfile">"Benutzerprofil erstellen:"</string>
    <string name="instructionsProfile">"Tragen Sie hier alle Informationen ein."</string>
    <string name="femaleRadio">"weiblich"</string>
    <string name="maleRadio">"männlich"</string>
    <string name="birthdayText">"Geburtsdatum:"</string>
    <string name="birthdayInput">"__.__.____"</string>
    <string name="weightText">"Gewicht:"</string>
    <string name="weightUnit">"kg"</string>
    <string name="heightText">"Größe:"</string>
    <string name="heightUnit">"cm"</string>
    <string name="predispos">"(erbliche) Vorerkrankungen"</string>
    <string name="cardiacDiseases">"Herzerkrankungen"</string>
    <string name="neurologicalDiseases">"neurologische Erkrankungen"</string>
    <string name="orthopaedicDiseases">"orthopädische Erkrankungen"</string>
    <string name="skinDiseases">"Hauterkrankungen"</string>
    <string name="hearingImpairment">"Hörbeeinträchtigung"</string>
    <string name="eyeDisease">"Augenerkrankung"</string>
    <string name="createProfileButton">"Profil erstellen"</string>
    <string name="instructionsPredispos">"Wählen Sie (erbliche) Vorbelastungen aus:"</string>
    <string name="smoking">"RaucherIn?"</string>
    <string name="allergies">"Allergien?"</string>
    <string name="yesRadio">Ja</string>
    <string name="noRadio">Nein</string>
    <string name="inputError">"Alle Werte müssen ausgefüllt werden.</string>

    <!-- Change Profile Activity -->
    <string name="changeDataButton">"Daten ändern"</string>
    <string name="changeProfileText">"Benutzerprofil ändern:"</string>

    <!--Last Appointments Activity -->
    <string name="lastAppointmentText">"Vergangene Termine:"</string>
    <string name="instructionsTextApp">"Wenn Sie sich an Ihre letzten Arzttermine erinnern, tragen Sie diese hier ein."</string>
    <string name="doc_prompt">"Arzt auswählen:"</string>
    <string-array name="doctorsArray">
        <item>Hausarzt</item>
        <item>Zahnarzt</item>
        <item>Frauenarzt</item>
        <item>Hautarzt</item>
        <item>Augenarzt</item>
        <item>HNO Arzt</item>
        <item>Kardiologe</item>
        <item>Neurologe</item>
        <item>Orthopäde</item>
    </string-array>
    <string name="lastApp">"Letzter Besuch"</string>
    <string name="getDate">"Termin erfassen"</string>
    <string name="savedDates">"Erfasste Termine:"</string>
    <string name="exampleDoc">"Beispiel: Zahnarzt"</string>
    <string name="exampleDate">"Beispiel: 10.12.2018"</string>
    <string name="deleteApp">"x"</string>
    <string name="finished">"Fertig"</string>
    <string name="appointDeleted">"Termin gelöscht: "</string>

    <!-- DocsAround Activity -->
    <string name="docsAroundTitle">"Ärzte in Ihrer Nähe"</string>

    <!-- Settings Activity -->
    <string name="settingsTitle">"Einstellungen"</string>
    <string name="changeLanguage">"Sprache ändern"</string>
    <string name="changePIN">"PIN ändern"</string>
    <string name="signOut">"Abmelden"</string>
    <string name="datasecurity">"Datenschutz (Rechtliche Hinweise)"</string>
    <string name="deleteProfil">"Profil löschen"</string>
    <string name="about">"Über"</string>
    <string name="changeProfile">"Profil ändern"</string>
    <string name="changeLanguageDialog">"Wählen Sie die Sprache aus…"</string>

    <!-- Calender Activity -->
    <string name="calenderHead">"Termin-Empfehlungen"</string>
    <string name="calenderOverview">"Überblick:"</string>
    <string name="calenderAppointments">"Arzttermine eintragen:"</string>

    <!-- NavigationDrawer Activity -->
    <string name="titleMenu">"Menü"</string>
    <string name="editProfilItem">"Benutzerprofil ändern"</string>
    <string name="viewCalenderItem">"Kalender anzeigen"</string>
    <string name="settingsItem">"Einstellungen"</string>
    <string name="helpItem">"Hilfe"</string>

    <!-- Change PIN Activity -->
    <string name="changePINHeading">"PIN ändern"</string>
    <string name="changePINOld">"Geben Sie den alten PIN ein:"</string>
    <string name="changePINNew">"Geben Sie den neuen PIN ein:"</string>
    <string name="changePINValidateNew">"Wiederholen Sie den neuen PIN:"</string>
    <string name="changePINCommitButton">"PIN ändern"</string>
    <string name="changePINWrongPIN">"Falscher PIN eingegben."</string>
    <string name="changePINNotMatching">"Neue PINs stimmen nicht überein \noder sind leer."</string>
    <string name="changePINSuccess">"PIN erfolgreich geändert"</string>
    <string name="changePINFail">"Ein Fehler ist aufgetreten, bitte versuchen Sie es erneut."</string>
    <string name="changePINTooShort">"PIN ist zu kurz."</string>
    <string name="hint">"1234"</string>

    <!-- Actionbar -->
    <string name="actionBarSettings">"Einstellungen"</string>
    <string name="actionBarHelp">"Hilfe"</string>
    <string name="actionBarOptions">"Optionen"</string>
    <string name="actionBarHome">"Kalenderansicht"</string>
    <string name="actionBarBack">"Zurück"</string>
    <string name="ActionBarChangeProfil">"Profil ändern"</string>
    <string name="actionBarMap">"Google Maps Ansicht"</string>
    <string name="actionBarAppointments">"Vergangene Termine eintragen"</string>
    
    <!-- Fingerprint Prompt Acitivity -->
    <string name="fingerprintTitle">"Fingerprint Authentifizierung"</string>
    <string name="fingerprintInstruc">"Legen Sie den Finger auf den Touchsensor\n um das Login durchzuführen."</string>
    <string name="success">"Login erfolgreich."</string>
    <string name="fail">"Login fehlgeschlagen."</string>
    <string name="failInstruc">"Legen Sie Ihren Finger zentral auf den Sensor."</string>
    <string name="noHardware">Ihr Gerät besitzt keinen Fingerprint Sensor.</string>
    <string name="noPermission">"Bitte erlauben Sie die Touchsensor Nutzung."</string>
    <string name="noFingerprint">"Kein Finger eingespeichert. Sie müssen mindestens einen Fingerabdruck in den Einstellungen des Gerätes registrieren."</string>
    <string name="noLockscreen">"Bitte aktivieren Sie eine Verschlüsselung für den Sperrbildschirm."</string>
    <string name="authentHelp">"Authentifizierung Hilfe:"</string>
    <string name="notRegistered">"Sie sind noch nicht registriert!\nBitte registrieren Sie sich zuerst."</string>


</resources>
