<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".Activities.SettingsActivity">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textSize="35sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:text="@string/changeLanguage" />

    <Button
        android:id="@+id/btnPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLanguage"
        android:text="@string/changePIN"
        android:onClick="onClickSwitchToPin"/>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPin"
        android:onClick="onClickLogout"
        android:text="@string/signOut" />

    <Button
        android:id="@+id/btnData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignOut"
        android:text="@string/datasecurity" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnData"
        android:text="@string/deleteProfil" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDelete"
        android:text="@string/about" />

    <Button
        android:id="@+id/btnChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAbout"
        android:text="@string/changeProfile"
        android:onClick="onClickSwitchToChangeProfile"/>

</RelativeLayout>