<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/empty"
        android:icon="@drawable/baseline_more_vert_white_18dp"
        android:orderInCategory="101"
        android:title="@string/actionBarOptions"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/actionBarSettings"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/actionBarHelp"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

</menu>