<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/userimage" />


    <TextView
        android:id="@+id/loginSlogan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Logo"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textviewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginSlogan"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/loginName"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="331dp" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewUsername"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="361dp" />

    <TextView
        android:id="@+id/textViewPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUsername"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/loginPIN"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="421dp" />

    <EditText
        android:id="@+id/inputPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPIN"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberPassword"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="450dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/inputPin"
        android:layout_marginTop="10dp"
        android:onClick="onClickSwitchToCalender"
        android:text="@string/loginButton"
        app:layout_constraintStart_toStartOf="@+id/textviewUsername"
        tools:layout_editor_absoluteY="523dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:onClick="onClickSwitchToRegister"
        android:text="@string/registerNewButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="604dp" />


</RelativeLayout>